Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52154

Annotated URL Example does not work on android

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.1
    • 5.6.0
    • Connectivity: NFC
    • None
    • Sony Xperia L(CyanogenMod 12.1)
    • Android

      It seems the "Annotated URL Example" does not work out of the box for android.
      It seems it fails at annotatedurl.cpp:76, manager->registerNdefMessageHandler returns -1.
      Edit: I totally misread everything including the documentation.
      I was thinking more is broken for NFC on android but it seems it is just this example.

      annotatedurl.cpp
      //...
      int result = manager->registerNdefMessageHandler(filter, this, SLOT(handleMessage(QNdefMessage,QNearFieldTarget*)));
      //! [QNearFieldManager register handler]
      
      if (result != -1)	//- "-1" means error so this should be if (result == -1)
      	return;
      manager->startTargetDetection();
      //...
      

      Any ordinary NFC app(for example NFC Tools) from the play store works just fine with the device.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ablasche Alex Blasche
            Marscho Marscho
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes