src/nfc/qnearfieldmanager.h
@@ -71,6 +71,10 @@ public:
     bool startTargetDetection();
     void stopTargetDetection();
 
+    //TODO Qt 6 Consider removal of this registration mechanism
+    //None of the currently supported platforms supports the feature
+    //or in fact the implementation (on Android) is not what the
+    //function is supposed to do.
     int registerNdefMessageHandler(QObject *object, const char *method);
     int registerNdefMessageHandler(QNdefRecord::TypeNameFormat typeNameFormat,
                                    const QByteArray &type,
