src/nfc/qnearfieldmanager_android.cpp
@@ -186,6 +186,10 @@ void QNearFieldManagerPrivateImpl::stopTargetDetection()
     updateReceiveState();
 }
 
+// FIXME This is supposed to be a platform registration. A message that
+// matches the given NDEF filter should restart the current application.
+// The implementation below only works as long as the current application
+// is running. It is not a platform wide registration on Android.
 int QNearFieldManagerPrivateImpl::registerNdefMessageHandler(QObject *object, const QMetaMethod &method)
 {
     ndefMessageHandlers.append(QPair<QPair<int, QObject *>, QMetaMethod>(QPair<int, QObject *>(m_handlerID, object), method));
@@ -194,6 +198,7 @@ int QNearFieldManagerPrivateImpl::registerNdefMessageHandler(QObject *object, co
     return m_handlerID++;
 }
 
+// FIXME see above
 int QNearFieldManagerPrivateImpl::registerNdefMessageHandler(const QNdefFilter &filter,
                                                              QObject *object, const QMetaMethod &method)
 {
